--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Snippy Mart WhatsApp AI Bot",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.18.2",
+    "openai": "^4.28.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
