--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "dev": "node index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "openai": "^4.28.0"
+        "express": "^4.18.2"
     },
     "engines": {
         "node": ">=18.0.0"
